--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,6 +18,9 @@
 </ion-header>
 
 <ion-content>
+<!--
+  <h1 class="title">Produtos</h1>
+
   <div class="search ion-padding">
     <ion-item lines="none">
       <ion-input placeholder="Search Your Product"></ion-input>
@@ -25,53 +28,67 @@
     </ion-item>
   </div>
 
-  <div class="title ion-padding">
-    <h2>Categorias</h2>
-    <p>Ver todas</p>
-  </div>
+  <ion-list *ngIf="!products.length">
+    <ion-item *ngFor="let item of [0, 1, 2]">
+      <ion-avatar slot="start">
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-avatar>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+        </p>
+        <p>
+          <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
+        </p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 
-  <div class="category-slider ion-padding-start">
-    <ion-slides [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
-      <ion-slide *ngFor="let category of categories">
-        <ion-col>
-          <h4>{{ category.name }}</h4>
-          <img src = "{{ category.image }}"/>
-        </ion-col>
-      </ion-slide>
-    </ion-slides>
-  </div>
+  <ion-list>
+    <ion-item-sliding *ngFor="let product of products">
+      <ion-item button [routerLink]="['/item-details', product.id]">
+        <ion-avatar slot="start">
+          <img [src]="product.picture">
+        </ion-avatar>
 
-  <div class="title ion-padding">
-    <h2 class="font-bold">Destaques</h2>
-    <p>Ver todas</p>
-  </div>
+        <ion-label>
+          {{ product.name }}
+          <p>{{ product.description }}</p>
+          <p>{{ product.createdAt | date: 'short' }}</p>
+        </ion-label>
 
-  <div class="product-slider ion-padding-start">
-    <ion-slides [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
-      <ion-slide *ngFor="let product of featuredProducts">
-        <ion-col class="ion-text-left" routerLink="/item-details" routerDirection="forward">
-            <img src = "{{ product.image }}"/>
-            <p> R${{product.price}} </p>
-            <h6> {{product.name}} </h6>
-        </ion-col>
-      </ion-slide>
-    </ion-slides>
-  </div>
+        <ion-note color="primary" slot="end" *ngIf="product.price">{{ product.price | currency: 'BRL' }}</ion-note>
+      </ion-item>
 
-  <div class="title ion-padding">
-    <h2 class="font-bold">Mais vendidos</h2>
-    <p>Ver todas</p>
-  </div>
-
-  <div class="product-slider ion-padding-start">
-    <ion-slides [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
-      <ion-slide *ngFor="let product of bestSellProducts">
-        <ion-col class="ion-text-left">
-            <img src = "{{ product.image }}"/>
-            <p> R${{product.price}} </p>
-            <h6> {{product.name}} </h6>
-        </ion-col>
-      </ion-slide>
-    </ion-slides>
-  </div>
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="deleteProduct(product.id)">
+          <ion-icon slot="top" name="trash"></ion-icon>
+          Excluir
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6">
+          <ion-button (click)="logout()" color="danger" expand="block">
+            Deslogar
+          </ion-button>
+        </ion-col>
+
+        <ion-col size="6">
+          <ion-button routerLink="../details/details.page.html" expand="block">
+            Add produto
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+</ion-footer>-->
