--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -14,23 +14,19 @@
 
     <div class="form-container">
       <ion-item>
-        <ion-label position="floating">Nome</ion-label>
-        <ion-input></ion-input>
-      </ion-item>
-      <ion-item>
         <ion-label position="floating">Email</ion-label>
-        <ion-input></ion-input>
+        <ion-input type="email" [(ngModel)]="userRegister.email"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Senha</ion-label>
-        <ion-input type="password"></ion-input>
+        <ion-input type="password" [(ngModel)]="userRegister.password"></ion-input>
         <ion-icon name="eye" slot="end"></ion-icon>
       </ion-item>
 
-      <ion-button expand="block" class="main-button">Sign Up</ion-button>
+      <ion-button expand="block" class="main-button" (click)="register()">Registrar</ion-button>
 
       <div class="sign-up">
-       Já possui uma conta? <ion-button color="dark" routerLink="/login" routerDirection="forward">Sign in</ion-button>
+       Já possui uma conta? <ion-button color="dark" routerLink="/login" routerDirection="forward">Entrar</ion-button>
       </div>
     </div>
   </div>
