Update, guard: Proteção de rotas, só permite alterar tela se usuario logado

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,16 +18,16 @@
 </ion-header>
 
 <ion-content>
-<!--
+
   <h1 class="title">Produtos</h1>
 
   <div class="search ion-padding">
     <ion-item lines="none">
-      <ion-input placeholder="Search Your Product"></ion-input>
+      <ion-input placeholder="Proucurar produto"></ion-input>
       <ion-icon name="search-outline" slot="start"></ion-icon>
     </ion-item>
   </div>
-
+<!--
   <ion-list *ngIf="!products.length">
     <ion-item *ngFor="let item of [0, 1, 2]">
       <ion-avatar slot="start">
