--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -26,91 +26,9 @@ ion-menu-button {
 }
 
 .title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 32px;
-
-  h2 {
-      margin: 0 0 0 16px;
-      color: #434343;
-  }
-
-  p {
-      margin: 0 16px 0 0;
-      color: #656565;
-  }
+  margin: 20px 0px 0px 20px;
 }
 
-.category-slider {
-  ion-slide {
-      width: 150px;
-      height: 100px;
-      margin-right: 10px;
-      margin-left: 20px;
-      margin-bottom: 30px;
-
-      ion-col {
-          height: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          h4 {
-              color: #ffffff;
-              margin: 0;
-          }
-
-          img {
-              position: absolute;
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              border-radius: 8px;
-              top: 0;
-              left: 0;
-              z-index: -1;
-              box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.16);
-          }
-      }
-  }
-}
-
-.font-bold {
-  font-weight: bold;
-}
-
-.product-slider {
-  margin-bottom: 30px;
-
-  ion-slide {
-      width: 150px;
-      height: auto;
-      margin-left: 20px;
-      margin-right: 10px;
-
-      ion-col {
-          img {
-              width: 100%;
-              height: 180px;
-              object-fit: cover;
-              border-radius: 8px;
-          }
-
-          p {
-              margin-top: 5px;
-              margin-bottom: 0;
-          }
-
-          h6 {
-              margin-top: 5px;
-              margin-bottom: 0;
-          }
-      }
-  }
-}
-
-// Removing highlight when focused/clicked on product
 ion-slide:focus {
   outline: none !important;
 }
