--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,28 +6,18 @@
           <ion-list id="inbox-list">
 
             <ion-menu-toggle auto-hide="false">
-              <ion-item lines="none" (click)="navigate('/home', 1)" detail="false" class="ion-text-center" [class.selected]="selectedIndex == 1">
+              <ion-item lines="none" (click)="navigate('/welcome', 1)" detail="false" class="ion-text-center" [class.selected]="selectedIndex == 1">
                 <ion-label>Início</ion-label>
               </ion-item>
             </ion-menu-toggle>
             <ion-menu-toggle auto-hide="false">
-              <ion-item lines="none" (click)="navigate('/profile', 2)" detail="false" class="ion-text-center" [class.selected]="selectedIndex == 2">
+              <ion-item lines="none" (click)="navigate('/home', 5)" detail="false" class="ion-text-center" [class.selected]="selectedIndex == 5">
+                <ion-label>Produtos</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
+            <ion-menu-toggle auto-hide="false">
+              <ion-item lines="none" (click)="navigate('/profile', 5)" detail="false" class="ion-text-center" [class.selected]="selectedIndex == 5">
                 <ion-label>Perfil</ion-label>
-              </ion-item>
-            </ion-menu-toggle>
-            <ion-menu-toggle auto-hide="false">
-              <ion-item lines="none" (click)="navigate('/my-cart', 3)" detail="false" class="ion-text-center" [class.selected]="selectedIndex == 3">
-                <ion-label>Carrinho</ion-label>
-              </ion-item>
-            </ion-menu-toggle>
-            <ion-menu-toggle auto-hide="false">
-              <ion-item lines="none" (click)="navigate('/favorite', 4)" detail="false" class="ion-text-center" [class.selected]="selectedIndex == 4">
-                <ion-label>Favoritos</ion-label>
-              </ion-item>
-            </ion-menu-toggle>
-            <ion-menu-toggle auto-hide="false">
-              <ion-item lines="none" (click)="navigate('/my-orders', 5)" detail="false" class="ion-text-center" [class.selected]="selectedIndex == 5">
-                <ion-label>Minhas compras</ion-label>
               </ion-item>
             </ion-menu-toggle>
           </ion-list>
