--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,7 +27,6 @@
       <ion-icon name="search-outline" slot="start"></ion-icon>
     </ion-item>
   </div>
-<!--
   <ion-list *ngIf="!products.length">
     <ion-item *ngFor="let item of [0, 1, 2]">
       <ion-avatar slot="start">
@@ -91,4 +90,4 @@
       </ion-row>
     </ion-grid>
   </ion-toolbar>
-</ion-footer>-->
+</ion-footer>
